--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         skype:Estebandelcastillo1027_1 <br>
         E-mail: estebandelcastillo1027@gmail.com <br>
         Celular: 3182020114 <br>
+    </p>
+    <a href="fase2/design.html"> Fase 2 </a>
         
 </body>
 </html>
