--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         E-mail: estebandelcastillo1027@gmail.com <br>
         Celular: 3182020114 <br>
     </p>
-    <a href="fase2/design.html"> Fase 2 </a>
+    <a href="fase2/design.html"> Fase 2 <br> </a>
+    <br>
+    <a href="fase3/index.html">Fase 3</a>
         
 </body>
 </html>
