--- a/fase3/recurso2.html
+++ b/fase3/recurso2.html
@@ -36,7 +36,7 @@
     </nav>
     <div>
         <section><h3>POSICIONAMIENTO WEB:</h3>
-           <center><iframe width="560" height="315" src="https://www.youtube.com/watch?v=yMOPuVlNDvM" title="frameworks" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+           <center><iframe width="560" height="315" src="https://www.youtube.com/embed/sfFgPq6eO-s" title="Posicionamiento web" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
         </section>
         <aside><iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=360&height=650&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="360" height="650" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></aside>
     </div>
